[package]
name = "chatter_box"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from"] }
dotenv = "0.15.0"
headless_chrome = "1.0.12"
rand = "0.8.5"
scraper = "0.19.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
socketioxide = { version = "0.14.0", features = ["state"] }
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "tls-native-tls" ] }
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
